--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.html
@@ -1,19 +1,19 @@
 <div class="container">
     <div class="controls" *ngIf="!loading">
         <div class="showTime">
-            <div>Poniendo mediciones hasta el momento:</div>
+            <div>{{ 'place_measurements.medicionesHastaMomento' | translate }}</div>
             <div>{{ this.maxDate | date: 'd/M/yyyy, H:mm:ss':'GMT' }}</div>
         </div>
         <mat-form-field appearance="fill">
-            <mat-label>Identificador del lugar</mat-label>
+            <mat-label>{{ 'place_measurements.identificadorLugar' | translate }}</mat-label>
             <mat-select [(value)]="selected" (selectionChange)="fetchOutputs()" placeholder="Mode">
                 <mat-option *ngFor="let place of this.allPlaces" value="{{place.id}}">{{place.identifier}}</mat-option>
             </mat-select>
         </mat-form-field>
-        <label id="example-radio-group-label">¿Hacer en tiempo real?</label>
+        <label id="example-radio-group-label">{{ 'place_measurements.hacerTiempoReal' | translate }}</label>
         <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" [(ngModel)]="realTime">
             <mat-radio-button class="example-radio-button" *ngFor="let season of ['Si','No']" [value]="season">
-                {{season}}
+                {{season | translate}}
             </mat-radio-button>
         </mat-radio-group>
 
