feat: end of translate

--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/actions/actions.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/actions/actions.component.html
@@ -1,24 +1,24 @@
 <div class="select">
     <mat-form-field appearance="fill">
-        <mat-label>Identificador del lugar</mat-label>
+        <mat-label>{{ 'actions.identificador' | translate }}</mat-label>
         <mat-select [(value)]="selectedPlace" (selectionChange)="changeFilter()">
-            <mat-option value="{{ 'TODOS' }}">TODOS</mat-option>
+            <mat-option value="{{ 'TODOS' }}">{{ 'alarms.all' | translate }}</mat-option>
             <mat-option *ngFor="let place of this.placesDate" value="{{place.id}}">{{place.identifier}}</mat-option>
         </mat-select>
     </mat-form-field>
 
     <mat-form-field appearance="fill">
-        <mat-label>Usuario</mat-label>
+        <mat-label>{{ 'actions.usuario' | translate }}</mat-label>
         <mat-select [(value)]="selectedUser" (selectionChange)="changeFilter()">
-            <mat-option value="{{ 'TODOS' }}">TODOS</mat-option>
+            <mat-option value="{{ 'TODOS' }}">{{ 'alarms.all' | translate }}</mat-option>
             <mat-option *ngFor="let user of this.usersDate" value="{{user.id}}">{{user.name}}</mat-option>
         </mat-select>
     </mat-form-field>
 
     <mat-form-field appearance="fill">
-        <mat-label>Salida</mat-label>
+        <mat-label>{{ 'actions.salida' | translate }}</mat-label>
         <mat-select [(value)]="selectedOutput" (selectionChange)="changeFilter()">
-            <mat-option value="{{ 'TODOS' }}">TODOS</mat-option>
+            <mat-option value="{{ 'TODOS' }}">{{ 'alarms.all' | translate }}</mat-option>
             <mat-option *ngFor="let out of this.outputBase" value="{{out.id}}">{{out.name}}</mat-option>
         </mat-select>
     </mat-form-field>
