--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.html
@@ -23,6 +23,9 @@
             <button class="button" mat-raised-button (click)="clicked()">Ver mediciones</button>
         </div>
 
+        <app-outputs class="outputs" [mode]="'component'" [place]="placeSelected"
+            [allPlaces]="this.allPlaces"></app-outputs>
+
 
     </div>
 
