--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/outputs/outputs.component.css
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/outputs/outputs.component.css
@@ -18,16 +18,57 @@
   margin-bottom: 3em;
 }
 
+.container-component {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  max-width: 11em;
+  min-width: 10em;
+  margin-top: 5em;
+  transform: scale(1.5);
+  margin-bottom: 3em;
+}
+
+.center {
+  text-align: center;
+}
+
 .output {
   width: 100%;
   display: flex;
   align-items: stretch;
   justify-content: space-between;
-  margin: .2em;
+  margin: 0.2em;
+}
+
+.output-component {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
+  margin: 0.1em;
+  padding: 0.4em;
+  border: 1px solid;
+}
+
+.output-component .sub-output-component {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: space-between;
+  margin: 0.2em;
+}
+
+.output-component .sended {
+  width: 100%;
+  text-align: center;
 }
 
 :host .mat-slide-toggle.mat-checked ::ng-deep.mat-slide-toggle-bar::after {
-  content: 'ON';
+  content: "ON";
   font-size: 45%;
   font-weight: 700;
   color: black;
@@ -37,7 +78,7 @@
 }
 
 :host .mat-slide-toggle:not(.mat-checked) ::ng-deep.mat-slide-toggle-bar::after {
-  content: 'OFF';
+  content: "OFF";
   font-size: 45%;
   font-weight: 700;
   color: white;
