feat: show the load of the data

--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/users/users.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/users/users.component.html
@@ -11,5 +11,6 @@
         </button>
     </div>
 </div>
-<app-table #tableUsers [config]="usersConfig" [data]="usersDate" [isLoadingTable]="false" (action)="tableEvent($event)">
+<app-table #tableUsers [config]="usersConfig" [data]="usersDate" [isLoadingTable]="isLoadingUsers"
+    (action)="tableEvent($event)">
 </app-table>
