--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/places.component.html
@@ -21,7 +21,7 @@
         <app-measurements-graph [place]="this.placeSelected" [inputMultiple]="true"></app-measurements-graph>
     </mat-tab>
     <mat-tab [label]="this.tabs[2] | translate">
-        <app-place-measurements [lastMeasurements]="lastMeasurements"></app-place-measurements>
+        <app-place-measurements></app-place-measurements>
     </mat-tab>
     <!--
     <mat-tab [label]="this.tabs[3] | translate" [disabled]="disableOutput">
