--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.html
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/places/measurements-graph/measurements-graph.component.html
@@ -25,8 +25,6 @@
 
         <app-outputs class="outputs" [mode]="'component'" [place]="placeSelected"
             [allPlaces]="this.allPlaces"></app-outputs>
-
-
     </div>
 
     <div *ngIf="loading" class="spinner">
@@ -34,13 +32,13 @@
     </div>
 
     <div *ngIf="!loading">
-        <div class="grap-container">
+        <div class="grap-container" id="container">
             <!-- [view]="view" -->
-            <ngx-charts-line-chart [animations]="false" [legend]="legend" [showXAxisLabel]="showXAxisLabel"
-                [showYAxisLabel]="showYAxisLabel" [xAxis]="xAxis" [yAxis]="yAxis" [xAxisLabel]="xAxisLabel"
-                [yAxisLabel]="yAxisLabel" [results]="multi" (select)="onSelect($event)" (activate)="onActivate($event)"
-                (deactivate)="onDeactivate($event)" [xAxisTickFormatting]="dateTickFormatting" [view]="view"
-                [rangeFillOpacity]="0">
+            <ngx-charts-line-chart (window:resize)="onResize($event)" [animations]="false" [legend]="legend"
+                [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxis]="xAxis" [yAxis]="yAxis"
+                [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" [results]="multi" (select)="onSelect($event)"
+                (activate)="onActivate($event)" (deactivate)="onDeactivate($event)"
+                [xAxisTickFormatting]="dateTickFormatting" [view]="view" [rangeFillOpacity]="0">
             </ngx-charts-line-chart>
         </div>
 
