--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.scss
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.scss
@@ -1,12 +1,13 @@
-.select{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-bottom: 1em;
+.select {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-bottom: 1em;
+  flex-wrap: wrap;
 }
 
 ::ng-deep .mat-form-field-type-mat-date-range-input .mat-form-field-infix {
-    width: 200px;
-    display: flex;
-    align-items: center;
-  }
+  width: 200px;
+  display: flex;
+  align-items: center;
+}
