feat: correct dates and form

--- a/server/front/TFGscada-app/src/app/shared/component/table/table.component.html
+++ b/server/front/TFGscada-app/src/app/shared/component/table/table.component.html
@@ -222,7 +222,7 @@
 
                 <tr class="mat-row" *matNoDataRow>
                     <td class="mat-cell" [colSpan]="config.columns.length">
-                        <p class="no-data">No results found</p>
+                        <p class="no-data">{{ 'noResultsFound' | translate }}</p>
                     </td>
                 </tr>
             </table>
