--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.css
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/alarms/alarms.component.css
@@ -7,7 +7,7 @@
 }
 
 ::ng-deep .mat-form-field-type-mat-date-range-input .mat-form-field-infix {
-  width: 200px;
+  width: 19em !important;
   display: flex;
   align-items: center;
 }
