--- a/server/front/TFGscada-app/src/app/features/dashboard/modules/actions/actions.component.css
+++ b/server/front/TFGscada-app/src/app/features/dashboard/modules/actions/actions.component.css
@@ -2,4 +2,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+::ng-deep .mat-form-field-type-mat-date-range-input .mat-form-field-infix {
+  width: 19em !important;
+  display: flex;
+  align-items: center;
 }
