--- a/server/front/TFGscada-app/src/app/features/auth/auth.component.scss
+++ b/server/front/TFGscada-app/src/app/features/auth/auth.component.scss
@@ -1,35 +1,45 @@
 .container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    background: #0f383c;
-    background: -webkit-linear-gradient(128deg, #0f383c 0%, #00cad7 100%);
-    background: linear-gradient(128deg, #0f383c 0%, #00cad7 100%);
-  
-    .main {
-      background-color: #ffffff;
-      width: 400px;
-      margin: auto;
-      border-radius: 1.5em;
-      box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
-  
-      .center {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 2rem;
-      }
-  
-      form {
-        display: flex;
-        flex-direction: column;
-        padding: 2rem;
-      }
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background: #0f383c;
+  background: -webkit-linear-gradient(128deg, #0f383c 0%, #00cad7 100%);
+  background: linear-gradient(128deg, #0f383c 0%, #00cad7 100%);
+
+  .main {
+    background-color: #ffffff;
+    width: 400px;
+    margin: auto;
+    border-radius: 1.5em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+
+    .center {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 2rem;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      padding: 2rem;
     }
   }
-  
-  @media (max-width: 600px) {
-    .main {
-      border-radius: 0px;
-    }
+}
+
+@media (max-width: 600px) {
+  .main {
+    border-radius: 0px;
   }
+}
+
+.center-collage {
+  text-align: center;
+  margin: auto;
+  .collage {
+    max-width: 42em;
+    border-radius: 25px;
+  }
+}
